-bug#0001564: Escape Community string for Linux command line 
-bug#0001568: Cacti currently gives a lot of warnings of deprecated functions on PHP 5.3
-bug#0001580: Extra newline in api_automation_tools.php breaks custom scripts
-bug#0001583: Crash on Large Deployments -> ini_set used to overwrite global php-config locally
-bug#0001587: 64bit HEX Strings don't convert to Decimal on 32bit Systems
-bug#0001595: double-hyphenated strings in polled OID values cause truncation of last hyphen and subsequent data when populating variables 
-bug#0001600: Default action on lists should be "None"
-bug#0001604: HEX Counter values enclosed in quotes not recognized as HEX
-bug#0001607: Web Basic authentication does not work with fastcgi 
-bug#0001609: Script server timeout too aggressive with 10 second poller interval
-bug#0001620: Max OID's max value reported incorrectly in Web UI
-bug#0001623: SQL JOIN on user_log without INDEX (performance issue)
-bug#0001633: PA: new hook in graph.php 
-bug#0001746: SNMP Hex-String matching 
-bug#0001772: Script Server is not honouring reindex method "Index Count Changed" and "Verify All Fields" 
-bug: remove graph permissions if graph is removed
-bug: remove host permissions if host is removed
-bug: add_tree.php did not allow nodes with propagating sort options
-bug: when adding a tree node via the api numeric and natural were reversed
-bug: Some snmp agents don't getnext on '.1' and need another oid '.1.3'
-bug: Remove call pass by reference from function declarations
-bug: When creating new graphs without a data source, print error to user instead of throwing php error
-bug: Browser query string does not contain arguments
-bug: inject_form_variables does not operate if more than 1 variable needs replacing
-bug: GRPINT now supporting AVERAGE, LAST, MAX and MIN correctly (MAX of MAX, MAX of AVERAGEs now possible)
-bug: verify DS MAX value on data source create (courtesy Fireball)