@@ -58,6 +58,7 @@ NOTE: Someone remove duplication between 0.8.7f and 0.8.8
 -bug#0001580: Extra newline in api_automation_tools.php breaks custom scripts
 -bug#0001583: Crash on Large Deployments -> ini_set used to overwrite global php-config locally
 -bug#0001587: 64bit HEX Strings don't convert to Decimal on 32bit Systems
+-bug#0001587: Feature from BugID 0001271 breaks for large values 
 -bug#0001595: double-hyphenated strings in polled OID values cause truncation of last hyphen and subsequent data when populating variables 
 -bug#0001600: Default action on lists should be "None"
 -bug#0001604: HEX Counter values enclosed in quotes not recognized as HEX
@@ -68,6 +69,7 @@ NOTE: Someone remove duplication between 0.8.7f and 0.8.8
 -bug#0001633: PA: new hook in graph.php 
 -bug#0001746: SNMP Hex-String matching 
 -bug#0001772: Script Server is not honouring reindex method "Index Count Changed" and "Verify All Fields" 
+-bug#0001776: Cacti Support for Multiple Simultaneous Databases Broken 
 -bug: remove graph permissions if graph is removed
 -bug: remove host permissions if host is removed
 -bug: add_tree.php did not allow nodes with propagating sort options
@@ -84,8 +86,7 @@ NOTE: Someone remove duplication between 0.8.7f and 0.8.8
 -bug: allow empty [upper|lower]_limit even without autoscaling
 -bug: Availability method Ping or SNMP generates meaningless warnings
 -bug: Warning in lib/snmp.php by misspelled variable
--bug#0001587: Feature from BugID 0001271 breaks for large values 
--bug#0001776: Cacti Support for Multiple Simultaneous Databases Broken 
+-bug: fix SQL error on api_reapply_suggested_graph_title for non-data-query graphs
 -documentation: Remove sgml documentation.  See http://docs.cacti.net for Documentation
 -documentation: Explaining Cacti Special Data Sources used on CDEFs, lots of CDEF examples using Special data Sources
 -documentation: Documentation of specific rrdtool feature
